--- a/demo/src/main/resources/templates/board/boardList.html
+++ b/demo/src/main/resources/templates/board/boardList.html
@@ -25,7 +25,7 @@
       </thead>
       <tbody>
         <tr th:if="${#lists.size(list)} > 0" th:each="list:${list}">
-          <td th:text="${list.boardId}"></td>
+          <td th:text="${list.rm}"></td>
           <td class="title">
               <!-- <a href="openBoardDetail?boardId=" th:attrappend="href=${list.boardId}" th:text="${list.title}"></a> @RequestParam로 받을 때-->
               <a href="openBoardDetail/" th:attrappend="href=${list.boardId}" th:text="${list.title}"></a>
