2022-10-20 기본 CRUD 작업처리

--- a/demo/src/main/resources/templates/board/boardDetail.html
+++ b/demo/src/main/resources/templates/board/boardDetail.html
@@ -4,6 +4,13 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" th:href="@{/css/board.css}"/>
+<style>
+      .tdValue {
+        font-weight: bold;
+      }
+
+</style>
+
 <script src="/js/commons.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
@@ -77,13 +84,12 @@
   });
 
 
-
-
-
 </script>
-
-
 </head>
+
+
+
+
 <body>
   <div>
     <h2>게시글 상세 화면</h2>
@@ -95,28 +101,27 @@
           <col width="15%">
           <col width="35%">
         </colgroup>
-        <caption>게시글 상세 내용</caption>
         <tbody>
           <tr>
-            <td scope="row">글 번호</td>
-            <td th:text="${board.boardId}"></td>
-            <td scope="row">조회수</td>
-            <td th:text="${board.hitCnt}"></td>
+            <td scope="row">글 번호 : </td>
+            <td class="tdValue" th:text="${board.boardId}"></td>
+            <td scope="row">조회수 : </td>
+            <td class="tdValue" th:text="${board.hitCnt}"></td>
           </tr>
           <tr>
-            <td scope="row">작성자</td>
-            <td th:text="${board.creatorId}"></td>
-            <td scope="row">작성일</td>
-            <td th:text="${board.createdAt}"></td>
+            <td scope="row">작성자 : </td>
+            <td class="tdValue" th:text="${board.creatorId}"></td>
+            <td scope="row">작성일 : </td>
+            <td class="tdValue" th:text="${board.createdAt}"></td>
           </tr>
           <tr>
-            <td scope="row">제목</td>
-            <td colspan="3"><input type="text" id="title" name="title" th:value="${board.title}" /></td>
+            <td scope="row">제목 : </td>
+            <td colspan="3"><input type="text" id="title" name="title" class="tdValue" th:value="${board.title}" /></td>
           </tr>
           <tr>
-            <td>내용</td>
+            <td style="vertical-align: top">내용 : </td>
             <td colspan="3" class="view_text">
-              <textarea title="내용" id="contents" name="contents" th:text="${board.contents}" rows="10" cols="50"></textarea>
+              <textarea class="tdValue" title="내용" id="contents" name="contents" th:text="${board.contents}" rows="10" cols="50"></textarea>
             </td>
           </tr>
         </tbody>
