--- a/demo/src/main/resources/templates/board/boardWrite.html
+++ b/demo/src/main/resources/templates/board/boardWrite.html
@@ -19,7 +19,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>내용</td>
+                    <td style="vertical-align: top">내용</td>
                     <td>
                         <textarea th:field="*{contents}"></textarea>
                     </td>
