--- a/demo/src/main/resources/templates/board/boardWrite.html
+++ b/demo/src/main/resources/templates/board/boardWrite.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/css/board.css}" />
     <title>Insert title here</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script>
+        
+            /**   
+            let div = document.createElement("div")
+            div.append("<p>asd</p>")
+            console.log(div.childNodes)
+         
+            /*  
+            let div = document.createElement("div")
+            div.append("Some text")
+
+            console.log(div.text()) // "Some text"
+            */
+            
+
+    </script>
+
+
 </head>
 
 <body>
@@ -26,7 +45,7 @@
                 </tr>
             </table>
             <input type="submit" id="submit" value="저장" class="btn" />
-            <a href="boardList" class="btn">목록으로</a>
+            <a href="/board/boardList" class="btn">목록으로</a>
         </form>
     </div>
 </body>
